<resources>
    <string name="app_name">TheFluffleCollaboration</string>
    <string name="emptyString" />
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="welcomeMessage">Welcome to the Fuffle Collaboration. \n\n\nPlease select the option appropriate to you:\n\n\n\n\nIf you are a registered admin please swipe right.\n\n\n\nIf you are a registered user or would like to join please swipe left to access the Fluffle Collaboration.  </string>
    <string name="email">Email:</string>
    <string name="username1">Username:</string>
    <string name="passowrd1">Password:</string>
    <string name="logout">Logout</string>
    <string name="name1">Name:</string>
    <string name="user_details">User Details</string>
    <string name="product_type">Product type</string>
    <string name="pet_type">Pet Type</string>
    <string name="written_by">Written By:</string>
    <string name="original_post">Original Post:</string>
    <string name="your_reply">Your Reply:</string>
    <string name="submit">Submit</string>
    <string name="log_out">Log out</string>
    <string name="logo_home_description">App Logo To Represent Home Page</string>
    <string name="mainmessage">This is your main menu, from here you can edit your details, search products and enter the Fluffle Community.\nYou can return to this menu at any time by selecting the logo image seen below.</string>
    <string name="searchbymessage">Here you can search through all the products we have details on.\nOnce you find what your looking for you can click on the products name to see more details.\nYou can also see reviews people have left for that product or leave your own.\n****We are still growing our range of products so if you can\'t find what your looking, check back again soon. Or why not post in the Fluffle Community and see if any of our other member can help you out.**** </string>
    <string name="FluffelCoWelcomeMessage">Welcome to the community section of the Fluffle Collaboration.\nNeed advice??\nMaybe you have a wealth of knowledge you\'d like to share.\nHere you can interact with other members of the community. You can view posts and reply to them, or even create a post of your own. \nHOP TO IT!!!!</string>
    <string name="title_activity_admin_display_product">AdminDisplayProduct</string>
</resources>
