<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:text="@string/user_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView2"
        android:textStyle="normal|bold"
        android:textSize="24sp" />

    <TextView
        android:text="@string/name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="54dp"
        android:id="@+id/textView"
        android:textStyle="normal|bold"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:id="@+id/TVname"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="34dp"
        android:id="@+id/textView11"
        android:textStyle="normal|bold"
        android:textSize="18sp" />

    <TextView
        android:text="@string/username1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp"
        android:id="@+id/textView13"
        android:textStyle="normal|bold"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView13"
        android:layout_alignLeft="@+id/TVemail"
        android:layout_alignStart="@+id/TVemail"
        android:id="@+id/TVusername"
        android:textSize="14sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/passowrd1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView13"
        android:layout_marginTop="39dp"
        android:id="@+id/textView16"
        android:textStyle="normal|bold"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView16"
        android:layout_alignLeft="@+id/TVusername"
        android:layout_alignStart="@+id/TVusername"
        android:id="@+id/TVpassword"
        android:textSize="14sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TVpassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:id="@+id/Blogout"
        android:onClick="onLogoutClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TVemail"
        android:textSize="14sp"
        android:layout_above="@+id/textView13"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
